--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,33 @@
 asgiref==3.5.2
+attrs==21.4.0
 backports.zoneinfo==0.2.1
 black==22.3.0
 click==8.1.3
+coverage==6.4.1
 Django==4.0.4
 django-cors-headers==3.13.0
 django-quill-editor==0.1.40
 djangorestframework==3.13.1
+factory-boy==3.2.1
+Faker==13.14.0
+inflection==0.5.1
+iniconfig==1.1.1
 mypy-extensions==0.4.3
+packaging==21.3
 pathspec==0.9.0
+Pillow==9.1.1
 platformdirs==2.5.2
+pluggy==1.0.0
 psycopg2==2.9.3
+py==1.11.0
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-cov==3.0.0
+pytest-django==4.5.2
+pytest-factoryboy==2.5.0
+python-dateutil==2.8.2
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
 typing-extensions==4.2.0
