--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+appdata==2.1.2
 asgiref==3.5.2
 async-timeout==4.0.2
 attrs==21.4.0
@@ -9,10 +10,11 @@ black==22.3.0
 celery==5.2.7
 certifi==2022.6.15
 charset-normalizer==2.0.12
-click==8.1.3
+click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+colored==1.4.3
 coverage==6.4.1
 Deprecated==1.2.13
 Django==4.0.4
@@ -47,6 +49,7 @@ pytest-django==4.5.2
 pytest-factoryboy==2.5.0
 python-crontab==2.6.0
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
 redis==4.3.4
 requests==2.28.0
@@ -54,6 +57,7 @@ sgmllib3k==1.0.0
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
+to-requirements.txt==1.2.0
 tomli==2.0.1
 typing-extensions==4.2.0
 tzdata==2022.1
