--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = osonwa.test_settings
-addopts = --nomigrations --cov=. --cov-report=html
+addopts = --nomigrations
+; addopts = --nomigrations --cov=. --cov-report=html
