--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - .env
     volumes:
       - ./mypostgresql.config:/usr/local/share/postgresql/postgresql.conf
+      - ./pg_hba.conf:/usr/local/share/postgresql/pg_hba.conf
       - ./init.sh:/docker-entrypoint-initdb.d/init-user-db.sh
       - pgdata:/var/lib/postgresql/data
   redisdb:
