--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ attrs==21.4.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
-black==22.3.0
+cachetools==5.2.0
 celery==5.2.7
 certifi==2022.6.15
 charset-normalizer==2.0.12
@@ -23,11 +23,17 @@ django-cors-headers==3.13.0
 django-quill-editor==0.1.40
 django-timezone-field==5.0
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.2
 factory-boy==3.2.1
 Faker==13.14.0
 feedparser==6.0.10
 gevent==21.12.0
+google-api-core==2.11.0
+google-auth==2.15.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.57.0
 greenlet==1.1.2
+httplib2==0.21.0
 idna==3.3
 inflection==0.5.1
 iniconfig==1.1.1
@@ -40,8 +46,12 @@ Pillow==9.1.1
 platformdirs==2.5.2
 pluggy==1.0.0
 prompt-toolkit==3.0.30
+protobuf==4.21.12
 psycopg2==2.9.3
 py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyJWT==2.6.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-cov==3.0.0
@@ -53,6 +63,7 @@ python-dotenv==0.20.0
 pytz==2022.1
 redis==4.3.4
 requests==2.28.0
+rsa==4.9
 sgmllib3k==1.0.0
 six==1.16.0
 soupsieve==2.3.2.post1
@@ -61,11 +72,13 @@ to-requirements.txt==1.2.0
 tomli==2.0.1
 typing-extensions==4.2.0
 tzdata==2022.1
+uritemplate==4.1.1
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.1
 zope.event==4.5.0
 zope.interface==5.4.0
-google-api-python-client==2.70.0
-djangorestframework-simplejwt==5.2.2
+google-api-python-client==2.71.0
+pip==20.0.2
+install==1.3.5
