--- a/requirements.txt
+++ b/requirements.txt
@@ -82,3 +82,5 @@ zope.interface==5.4.0
 google-api-python-client==2.71.0
 pip==20.0.2
 install==1.3.5
+python-twitter-v2==0.8.1
+python-twitter==3.5
