--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ appdata==2.1.2
 asgiref==3.5.2
 async-timeout==4.0.2
 attrs==21.4.0
+Authlib==0.15.6
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
+black==22.3.0
 cachetools==5.2.0
 celery==5.2.7
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.0.3
 click-didyoumean==0.3.0
@@ -16,6 +19,8 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colored==1.4.3
 coverage==6.4.1
+cryptography==39.0.0
+dataclasses-json==0.5.7
 Deprecated==1.2.13
 Django==4.0.4
 django-celery-beat==2.3.0
@@ -27,8 +32,10 @@ djangorestframework-simplejwt==5.2.2
 factory-boy==3.2.1
 Faker==13.14.0
 feedparser==6.0.10
+future==0.18.3
 gevent==21.12.0
 google-api-core==2.11.0
+google-api-python-client==2.71.0
 google-auth==2.15.0
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.57.0
@@ -37,9 +44,13 @@ httplib2==0.21.0
 idna==3.3
 inflection==0.5.1
 iniconfig==1.1.1
+install==1.3.5
 kombu==5.2.4
 lxml==4.9.0
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
 mypy-extensions==0.4.3
+oauthlib==3.2.2
 packaging==21.3
 pathspec==0.9.0
 Pillow==9.1.1
@@ -51,6 +62,7 @@ psycopg2==2.9.3
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.21
 PyJWT==2.6.0
 pyparsing==3.0.9
 pytest==7.1.2
@@ -60,9 +72,13 @@ pytest-factoryboy==2.5.0
 python-crontab==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+python-facebook-api==0.15.0
+python-twitter==3.5
+python-twitter-v2==0.8.1
 pytz==2022.1
 redis==4.3.4
 requests==2.28.0
+requests-oauthlib==1.3.1
 rsa==4.9
 sgmllib3k==1.0.0
 six==1.16.0
@@ -71,6 +87,7 @@ sqlparse==0.4.2
 to-requirements.txt==1.2.0
 tomli==2.0.1
 typing-extensions==4.2.0
+typing-inspect==0.8.0
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.9
@@ -79,8 +96,3 @@ wcwidth==0.2.5
 wrapt==1.14.1
 zope.event==4.5.0
 zope.interface==5.4.0
-google-api-python-client==2.71.0
-pip==20.0.2
-install==1.3.5
-python-twitter-v2==0.8.1
-python-twitter==3.5
