production docker files

--- a/osonwa.ini
+++ b/osonwa.ini
@@ -1,22 +1,16 @@
-# mysite_uwsgi.ini file
+; mysite_uwsgi.ini file
 [uwsgi]
 
 chdir = /app/www
-# Django's wsgi file
 module = osonwa.wsgi:application
-# the virtualenv (full path)
-home = /app/www/env
+; home = /app/www/env
 
-# process-related settings
-# master
+
 master  = true
-# maximum number of worker processes
 processes = 10
 
 
-protocol = http
-socket    = :8080
+socket = 0.0.0.8000:
+wsgi-file = osonwa/wsgi.py
 chmod-socket = 666
-vacuum = true
-
-die-on-term = true
+stats = 0.0.0.0:9000
