--- a/osonwa.ini
+++ b/osonwa.ini
@@ -10,7 +10,7 @@ master  = true
 processes = 10
 
 
-socket = 0.0.0.8000:
+socket = 0.0.0.0:8000
 wsgi-file = osonwa/wsgi.py
 chmod-socket = 666
 stats = 0.0.0.0:9000
